<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_filterCat"
        android:icon="@drawable/ic_filtercat_alt_light"
        android:title="@string/btnLblSettings"
        app:showAsAction="always" />

    <item android:id="@+id/action_FilterState"
        android:icon="@drawable/ic_filterstate_alt_light"
        android:title="@string/btnLblSettings"
        app:showAsAction="always" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/btnLblSettings"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_none"
        android:title="@string/btnLblFilterAll"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_TOH"
        android:title="@string/btnLblFilterTOH"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_DB"
        android:title="@string/btnLblFilterDB"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_HUEY"
        android:title="@string/btnLblFilterHUEY"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_NP"
        android:title="@string/btnLblFilterNP"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_K9"
        android:title="@string/btnLblFilterK9"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_GS"
        android:title="@string/btnLblFilterGS"
        app:showAsAction="never" />

    <item android:id="@+id/action_filter_MTr"
        android:title="@string/btnLblFilterMTr"
        app:showAsAction="never" />

</menu>