<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".captureBonus">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:id="@+id/basicBonusInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/toolbar"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/bonusCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueCategory"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/bonusCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueBonusCode"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/bonusName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueBonusName"
                android:layout_below="@id/bonusCategory"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/bonusAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueBonusAddress"
                android:layout_below="@id/bonusName"/>

            <TextView
                android:id="@+id/bonusCoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueGPSCoordinates"
                android:layout_below="@id/bonusAddress"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/bonusMainImage"
            android:contentDescription="@string/mainImageDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/basicBonusInfo"
            android:src="@drawable/no_image_taken"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/bonusSecondaryImage"
            android:contentDescription="@string/secondaryImageDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bonusMainImage"
            android:src="@drawable/optional_2nd_image"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/additionalBonusDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAdditionalDetails"
            android:layout_below="@id/bonusSecondaryImage"
            android:layout_marginLeft="8dp"/>

        <ImageView
            android:id="@+id/bonusSampleImage"
            android:contentDescription="@string/sampleImageDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/additionalBonusDetails"
            android:src="@drawable/sample_image_missing"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btnSubmitBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLblSubmitBonus"
            android:layout_below="@id/bonusSampleImage"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>