<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".bonusDetail">

        <RelativeLayout
            android:id="@+id/basicBonusInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/bonusName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueBonusName"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/bonusName"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bonusCity"
                    android:layout_width="wrap_content"
                    android:textAlignment="textEnd"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/valueBonusCity" />

                <TextView
                    android:id="@+id/bonusState"
                    android:layout_width="0dp"
                    android:layout_weight=".75"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:text="@string/valueBonusState" />
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/bonusSampleImage"
            android:contentDescription="@string/sampleImageDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sample_image_missing"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_marginHorizontal="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bonusCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueCategory" />

            <TextView
                android:id="@+id/bonusCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:text="@string/valueBonusCode" />
        </LinearLayout>

        <TextView
            android:id="@+id/bonusCoordinates"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/valueGPSCoordinates" />

    </LinearLayout>
</ScrollView>