<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appSettingsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/lblSettingsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:text="@string/lblSettingsTitle"
        android:textSize="24sp"
        android:layout_marginStart="8dp"/>

    <RelativeLayout
        android:id="@+id/rowRiderInfo"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblSettingsTitle"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/lblRiderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/lblRiderNumber"/>

        <EditText
            android:id="@+id/fieldRiderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:hint="@string/defaultRiderNumber"
            android:maxLength="3"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rowPillionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rowRiderInfo"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/lblPillionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/lblPillionNumber"/>

        <EditText
            android:id="@+id/fieldPillionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/defaultRiderNumber"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rowButtonsAndLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rowPillionInfo"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="saveRiderInfo"
            android:text="@string/btnLblSaveRiderInfo"/>

        <ImageView
            android:id="@+id/imageTOHLogo"
            android:contentDescription="@string/tohLogoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:src="@mipmap/toh_logo"/>

        <Button
            android:id="@+id/btnSendAppFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnLblSendFeedback" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblAppVersionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:layout_margin="8dp"/>

</RelativeLayout>
